Added pagination and sorting to the GET all endpoints